test/fixtures/diagnostics/type-checker/negative/composition-shift-ambiguity/input.tysh
namespace Samples.TypeChecker.CompositionShiftAmbiguity

enum Permission {
  None,
  Read,
  Write
}

record Point(X: int)

let boolShift = true >> false

let stringShift = "left" << 1

let decimalShift = 1.0m >> 1

fun enumShiftLike(): Permission =
  Permission.Read >> Permission.Write

fun nullableShiftLike(): int {
  let maybe: int? = 1
  maybe >> 1
  0
}

fun unsupportedCount(value: int, count: uint): int =
  value << count

fun structuralShift(point: Point): int {
  point >> point
  0
}
